Added file descriptors

--- a/index.css
+++ b/index.css
@@ -1,3 +1,7 @@
+/*
+This CSS file contains the style information for the navbar.
+*/
+
 .topnav {
     overflow: hidden;
     background-color: #e9e9e9;
