--- a/templates/advancedsearch.html
+++ b/templates/advancedsearch.html
@@ -13,13 +13,13 @@
   <body>
     <div class="topnav" id="topnav">
       <img src="logodefault.jpg" style="width:400px;height:100px;"/>
-      <a href="index.html">Home</a>
+      <a href="/">Home</a>
       <a href="#about">About</a>
       <a href="#contact">Contact</a>
-      <a href="login.html">Login</a>
-      <a class="active" href="advancedsearch.html">Search</a>
+      <a href="login">Login</a>
+      <a class="active" href="advancedsearch">Search</a>
       <div class="search-container">
-        <form action="./search.html" accept-charset="UTF-8" method="get">
+        <form action="search" accept-charset="UTF-8" method="get">
           <input type="text" placeholder="Search.." name="q" maxlength="1024">
           <button type="submit"><i class="bi bi-search"></i></button>
         </form>
