--- a/templates/index.html
+++ b/templates/index.html
@@ -14,13 +14,13 @@
     <!-- Top Nav bar -->
     <div class="topnav" id="topnav">
       <img src="logodefault.jpg" style="width:400px;height:100px;"/>
-      <a class="active" href="index.html">Home</a>
+      <a class="active" href="/">Home</a>
       <a href="#about">About</a>
       <a href="#contact">Contact</a>
       <a href="login.html">Login</a>
-      <a href="advancedsearch.html">Search</a>
+      <a href="advancedsearch">Search</a>
       <div class="search-container">
-        <form action="./search.html" accept-charset="UTF-8" method="get">
+        <form action="search" accept-charset="UTF-8" method="get">
           <input type="text" placeholder="Search.." name="q" maxlength="1024" >
           <button type="submit"><i class="bi bi-search"></i></button>
         </form>
