Updated to pass validators

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <title>Home</title>
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <script src="index.js"></script>
     <script src="search.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
@@ -13,7 +13,7 @@
   <body>
     <!-- Top Nav bar -->
     <div class="topnav" id="topnav">
-      <img src="logodefault.jpg" style="width:400px;height:100px;"/>
+      <img src="logodefault.jpg" style="width:400px;height:100px;" alt>
       <a class="active" href="/">Home</a>
       <a href="#about">About</a>
       <a href="#contact">Contact</a>
