Added file descriptors to html pages
search.html and advancedsearch.html now contain a short file descriptor

--- a/templates/advancedsearch.html
+++ b/templates/advancedsearch.html
@@ -1,3 +1,4 @@
+<!-- An advanced search page which will redirect you to search.html once form is submitted -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
