--- a/templates/search.html
+++ b/templates/search.html
@@ -1,3 +1,4 @@
+<!-- Will submit a GET request to server on load based on the parameters passed to the page -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
