--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -17,7 +17,7 @@
       <a class="active" href="/">Home</a>
       <a href="#about">About</a>
       <a href="#contact">Contact</a>
-      <a href="login.html">Login</a>
+      <a href="login">Login</a>
       <a href="advancedsearch">Search</a>
       <div class="search-container">
         <form action="search" accept-charset="UTF-8" method="get">
