Common Header/Footer Added
Each html file contains the appropriate jinja code to paste in the common navbar and footer.
The routes file has been updated to pass this information to the site.

Known issues: index.css needs to be included for them to be formatted correctly.

--- a/app/templates/items.html
+++ b/app/templates/items.html
@@ -11,6 +11,7 @@
     </head>
 
     <body>
+        {{ pageElements["navbar"] | safe }}
         <!-- content for the item image and information -->
         <img src="book.jpg" alt="Item Image" id="item-image">
         <div class="item-info" id="item-info">
@@ -20,6 +21,6 @@
         </div>
 
         <script src="items.js"></script>
-
+        {{ pageElements["footer"] | safe }}
     </body>
 </html>
