--- a/app/templates/account.html
+++ b/app/templates/account.html
@@ -4,6 +4,7 @@
         <title>Buy Nothing: Account</title>
     </head>
     <body>
+        {{ pageElements["navbar"] | safe }}
         <h1>My Account</h1>
         <h2>Details</h2>
         <span>Username: jimmy_lee89</span><br>
@@ -22,6 +23,6 @@
             <img class="badge" width=100px height=100px src="assets/badges/give-bronze.png"><br>
             <span>BRONZE GIVER</span>
         </div>
-
+        {{ pageElements["footer"] | safe }}
     </body>
 </html>
