--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,20 +12,7 @@
   </head>
   <body>
     <!-- Top Nav bar -->
-    <div class="topnav" id="topnav">
-      <img src="logodefault.jpg" style="width:400px;height:100px;" alt>
-      <a class="active" href="/">Home</a>
-      <a href="#about">About</a>
-      <a href="#contact">Contact</a>
-      <a href="login">Login</a>
-      <a href="advancedsearch">Search</a>
-      <div class="search-container">
-        <form action="search" accept-charset="UTF-8" method="get">
-          <input type="text" placeholder="Search.." name="q" maxlength="1024" >
-          <button type="submit"><i class="bi bi-search"></i></button>
-        </form>
-      </div>
-    </div>
+    {{ pageElements["navbar"] | safe }}
 
     <!-- This wrapper contains the items -->
     <div class="row d-flex justify-content-center" id="mainContent"></div>
@@ -48,5 +35,6 @@
         </ul>
       </footer>
     </div>
+    {{ pageElements["footer"] | safe }}
   </body>
 </html>
