--- a/app/templates/upload.html
+++ b/app/templates/upload.html
@@ -8,6 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </head>
   <body>
+    {{ pageElements["navbar"] | safe }}
     <br>
     <div class="container" align="center">
       <div class="col-sm-6" align="center">
@@ -60,5 +61,6 @@
       </div>
       <br>
   </div>
+  {{ pageElements["footer"] | safe }}
   </body>
 </html>
