--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,22 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>Home</title>
-    <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-    <script src="index.js"></script>
-    <script src="search.js"></script>
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-  </head>
-  <body>
-    <!-- Top Nav bar -->
-    {{ pageElements["navbar"] | safe }}
-
-    <!-- This wrapper contains the items -->
-    <div class="row d-flex justify-content-center" id="mainContent"></div>
-
-    {{ pageElements["footer"] | safe }}
-  </body>
-</html>
+{% extends "base.html" %}
+{% block title %}Home{% endblock %}
+{% block content %}
+  <div class="row d-flex justify-content-center" id="mainContent"></div>
+{% endblock %}
