--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,12 +15,12 @@
 <body>
     <!-- Header derived from w3schools -->
     <div class="topnav" id="topnav">
-        <img src="logodefault.jpg" style="width:400px;height:100px;" alt>
-        <a class="{% if active_link == '/' %}active{% endif %}" href="/">Home</a>
-        <a class="{% if active_link == '/about' %}active{% endif %}" href="about">About</a>
-        <a class="{% if active_link == '/contact' %}active{% endif %}" href="contact">Contact</a>
-        <a class="{% if active_link == '/login' %}active{% endif %}" href="login">Login</a>
-        <a class="{% if active_link == '/advancedsearch' %}active{% endif %}" href="advancedsearch">Search</a>
+        <img src="logodefault.jpg" style="width:330px;height:100px;" alt>
+        <a class="d-none d-md-block {% if active_link == '/' %}active{% endif %}" href="/">Home</a>
+        <a class="d-none d-lg-block {% if active_link == '/about' %}active{% endif %}" href="about">About</a>
+        <a class="d-none d-lg-block {% if active_link == '/contact' %}active{% endif %}" href="contact">Contact</a>
+        <a class="d-none d-md-block {% if active_link == '/login' %}active{% endif %}" href="login">Login</a>
+        <a class="d-none d-lg-block {% if active_link == '/advancedsearch' %}active{% endif %}" href="advancedsearch">Search</a>
         <div class="search-container">
             <form action="search" accept-charset="UTF-8" method="get">
                 <input type="text" placeholder="Search.." name="q" maxlength="1024" >
