--- a/app/static/index.css
+++ b/app/static/index.css
@@ -72,16 +72,13 @@ background: #ccc;
     }
 }
 
-#mainContent {
+#content {
     margin-top: 10px;
     margin-bottom: 10px;
 }
 
 .anItem {
-    vertical-align: top;
-    display: inline-block;
-    width: 100px;
-    max-width: 100%;
-    margin: 10px;
-    white-space: pre;
+    padding: 5px;
+    margin-bottom: 10px;
+    text-align: center;
 }
