--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -19,8 +19,8 @@
         {% for item in items %}
         <div class="anItem col-lg-2 col-md-3 col-sm-5 col-xs-6" id="{{item.nID}}" onclick="openItemPage(event, {{ item.nID }})">
             <!-- If the image wasn't passed, render the default -->
-            <img src="{% if item.imageref %}{{ item.imageref }}{% else %}{{ defaultimage }}{% endif %}">
-            <p>Name: {{item.name}}&#10;&#13;Suburb: {{item.suburb}}&#10;&#13;Who: {{item.who}}</p></div>
+            <img class="img-fluid" src="{% if item.imageref %}{{ item.imageref }}{% else %}{{ defaultimage }}{% endif %}">
+            <p style="white-space: pre;">Name: {{item.name}}&#10;&#13;Suburb: {{item.suburb}}&#10;&#13;Who: {{item.who}}</p></div>
         {% endfor %}
     </div>
 {% endblock %}
