Removed "pagelements" jinja tags
Pages should now be using the template 'base.html' rather than be passed in individual page elements.

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,7 +5,7 @@
     <!-- This may be used on the search results page, so may add to a js file later -->
     <script>
         function openItemPage(event, nID) {
-            var ref = "./item?" + nID;
+            var ref = "./item/" + nID;
             if(event.ctrlKey || event.metaKey){
                 window.open(ref, "_blank");
             } else {
