Upload page now with template
Updated the upload page to use the jinja template and added "Post" to the header to lead to it.

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -20,6 +20,7 @@
         <a class="d-none d-lg-block {% if active_link == '/contact' %}active{% endif %}" href="contact">Contact</a>
         <a class="d-none d-md-block {% if active_link == '/login' %}active{% endif %}" href="login">Login</a>
         <a class="d-none d-lg-block {% if active_link == '/advancedsearch' %}active{% endif %}" href="advancedsearch">Search</a>
+        <a class="d-none d-md-block {% if active_link == '/upload' %}active{% endif %}" href="upload">Post</a>
         <div class="search-container">
             <form action="search" accept-charset="UTF-8" method="get">
                 <input type="text" placeholder="Search.." name="q" maxlength="1024" >
