--- a/app/templates/upload.html
+++ b/app/templates/upload.html
@@ -1,13 +1,6 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <link rel="stylesheet" href="site.css">
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  </head>
-  <body>
+{% extends "base.html" %}
+{% block title %}Upload{% endblock %}
+{% block content %}
     <div class="container" align="center">
       <div class="col-sm-6" align="center">
         <h1>
@@ -59,5 +52,4 @@
       </div>
       <br>
   </div>
-  </body>
-</html>
+{% endblock %}
