--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,19 +1,17 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Buy Nothing: Log in</title>
-    </head>
-    <body>
-        <h1>Log In</h1>
-        <form>
-            <label for="username">Username:</label>
-            <input type="text" id="username" name="username">
-            <br>
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password">
-            <br>
-            <input type="submit" value="Login" method="post">
-        </form>
-        <!-- TODO: Forgot my password button/link -->
-    </body>
-</html>
+
+{% extends "base.html" %}
+{% block title %}Login{% endblock %}
+{% block content %}
+<div class="container">
+    <h1>Login</h1>
+    <form>
+        <label for="username">Username:</label>
+        <input type="text" id="username" name="username">
+        <br>
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password">
+        <br>
+        <input type="submit" value="Login" method="post">
+    </form>
+</div>
+{% endblock %}
