--- a/app/templates/upload.html
+++ b/app/templates/upload.html
@@ -1,55 +1,41 @@
 {% extends "base.html" %}
 {% block title %}Upload{% endblock %}
 {% block content %}
-    <div class="container" align="center">
-      <div class="col-sm-6" align="center">
-        <h1>
-          Post Upload Form
-        </h1>
-      </div>
-      <!--Radio Buttons to choose post type-->
-      <div class="col-sm-4 head" align="center">
-        <div class="input-group-prepend">
-          <label for="imgs">Post Type:</label>
+    <div class="container">
+      <form accept-charset="UTF-8">
+        <!--Dropdown to select post type-->
+        <div class="form-group row">
+          <label for="postType" class="col-sm-3 col-form-label">Post Type</label>
+          <div class="col-sm-9">
+            <select class="custom-select" id="postType" name="postType" required>
+              <option disabled selected value>Choose...</option>
+              <option value="give">Give</option>
+              <option value="request">Request</option>
+            </select>
+          </div>
         </div>
-      </div>
-      <div class="col-sm-4" align="center">
-        <select class="custom-select" id="postType" name="postType" required>
-          <option selected>Choose...</option>
-          <option>Give</option>
-          <option>Request</option>
-        </select>
-      </div>
-      <br>
-      <div class="col-sm-4 head"  align="center">
-        <!--Text box item-name-->
-        <label for="description">Item Name:</label>
-      </div>
-      <div class="form-group col-sm-6"  align="center">
-        <!--<input class= "form-control-lg" type="text" id="description" placeholder="This item is...">-->
-        <input type="text" id="item" name="item" class="form-control" rows="3" placeholder="The item is..." required></textarea>
-      </div>
-      <br>
-      <div class="col-sm-4 head"  align="center">
-        <!--Text box for item description-->
-        <label for="description">Item Description:</label>
-      </div>
-      <div class="form-group col-sm-6"  align="center">
-        <!--<input class= "form-control-lg" type="text" id="description" placeholder="This item is...">-->
-        <textarea id="description" name="description" class="form-control" rows="3" placeholder="This item has..." required></textarea>
-      </div>
-      <br>
-      <!--Allow user to upload images for post-->
-      <div class="col-sm-4 head"  align="center">
-        <label for="imgs">Select images:</label>
-      </div>
-      <div class="col-sm-4"  align="center">
-        <input type="file" id="imgs" name="imgs" accept="image/*" multiple>
-      </div>
-      <br>
-      <div class="col-sm-4" align="center">
-        <input type="submit" value="Submit">
-      </div>
-      <br>
+        <div class="form-group row">
+          <label for="item" class="col-sm-3 col-form-label">Item Name</label>
+          <div class="form-group col-sm-9">
+            <input type="text" id="item" name="item" class="form-control" rows="3" placeholder="The item is..." required></textarea>
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="item" class="col-sm-3 col-form-label">Description</label>
+          <div class="form-group col-sm-9">
+            <textarea id="description" name="description" class="form-control" rows="3" placeholder="This item has..." required></textarea>
+          </div>
+        </div>
+        <!--Allow user to upload images for post-->
+        <div class="form-group row">
+          <label for="imgs" class="col-sm-3 col-form-label">Select Images</label>
+          <div class="col-sm-9">
+            <input type="file" id="imgs" name="imgs" accept="image/*" multiple>
+          </div>
+        </div>
+        <div>
+          <button type="submit" class="btn btn-primary mb-2">Submit</button>
+        </div>
+      </form>
   </div>
 {% endblock %}
