Updated logo and inserted into navbar

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,7 +14,7 @@
 <body>
     <!-- Header derived from w3schools -->
     <div class="topnav" id="topnav">
-        <img src="logodefault.jpg" style="width:330px;height:100px;" alt>
+        <img src="NewHome Logo.png" style="width:330px;height:60px;" alt="New Home Logo">
         <a class="d-none d-md-block {% if active_link == '/' %}active{% endif %}" href="/">Home</a>
         <a class="d-none d-lg-block {% if active_link == '/about' %}active{% endif %}" href="about">About</a>
         <a class="d-none d-lg-block {% if active_link == '/contact' %}active{% endif %}" href="contact">Contact</a>
