--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,8 +14,7 @@
 <body>
     <!-- Header derived from w3schools -->
     <div class="topnav" id="topnav">
-        <img src="NewHome Logo.png" style="width:330px;height:60px;" alt="New Home Logo">
-        <a class="d-none d-md-block {% if active_link == '/' %}active{% endif %}" href="/">Home</a>
+        <a class="d-none d-md-block {% if active_link == '/' %}active{% endif %} home" href="/"><img src="NewHome Logo.png" style="height:50px;" alt="New Home Logo"></a>
         <a class="d-none d-lg-block {% if active_link == '/about' %}active{% endif %}" href="about">About</a>
         <a class="d-none d-lg-block {% if active_link == '/contact' %}active{% endif %}" href="contact">Contact</a>
         <a class="d-none d-md-block {% if active_link == '/login' %}active{% endif %}" href="login">Login</a>
