--- a/app/static/index.css
+++ b/app/static/index.css
@@ -1,5 +1,5 @@
 /*
-This CSS file contains the style information for the navbar.
+This CSS file contains the style information for the navbar and footer.
 */
 
 .topnav {
@@ -81,12 +81,22 @@ background: #ccc;
 }
 
 #content {
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 40px;
+    margin-bottom: 40px;
 }
 
-.anItem {
-    padding: 5px;
-    margin-bottom: 10px;
-    text-align: center;
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    margin: 0;
+}
+
+.content {
+    flex: 1;
+}
+
+.footer {
+    flex-shrink: 0;
+    height: 100px;
 }
