--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -28,10 +28,10 @@
         </div>
     </div>
 
-    <div id="content">{% block content %}{% endblock %}</div>
+    <div class="content" id="content">{% block content %}{% endblock %}</div>
 
     <!-- The following was derived from https://getbootstrap.com/docs/5.2/examples/footers/ -->
-    <div class="container">
+    <div class="container footer">
         <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
           <p class="col-md-4 mb-0 text-muted">&copy; 2024 NewHome, Inc</p>
   
