--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -40,11 +40,11 @@
           </a>
   
           <ul class="nav col-md-4 justify-content-end">
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Features</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Pricing</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
+            <li class="nav-item"><a href="/" class="nav-link px-2 text-muted">Home</a></li>
+            <li class="nav-item"><a href="/about" class="nav-link px-2 text-muted">About Us</a></li>
+            <li class="nav-item"><a href="/contact" class="nav-link px-2 text-muted">Contact Us</a></li>
+            <li class="nav-item"><a href="/login" class="nav-link px-2 text-muted">Log In</a></li>
+            <li class="nav-item"><a href="/upload" class="nav-link px-2 text-muted">Post</a></li>
           </ul>
         </footer>
     </div>
