--- a/app/static/index.css
+++ b/app/static/index.css
@@ -7,6 +7,10 @@ This CSS file contains the style information for the navbar and footer.
     background-color: #e9e9e9;
     display: flex;
     align-items: center;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 999;
 }
   
 .topnav a {
@@ -60,7 +64,7 @@ This CSS file contains the style information for the navbar and footer.
 }
 
 .topnav .search-container button:hover {
-background: #ccc;
+    background: #ccc;
 }
 
 @media screen and (max-width: 600px) {
@@ -80,7 +84,9 @@ background: #ccc;
     }
 }
 
+
 #content {
+    padding-top: 60px;
     margin-top: 40px;
     margin-bottom: 40px;
 }
