--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -4,7 +4,8 @@
 {% block content %}
 <div class="container">
     <h1>Login</h1>
-    <form>
+    <form action="" method="post" novalidate>
+        <!--
         <label for="username">Username:</label>
         <input type="text" id="username" name="username">
         <br>
@@ -12,6 +13,18 @@
         <input type="password" id="password" name="password">
         <br>
         <input type="submit" value="Login" method="post">
+        -->
+        {{ form.hidden_tag() }}
+        <p>
+            {{ form.username.label }}<br>
+            {{ form.username(size=32) }}
+        </p>
+        <p>
+            {{ form.password.label }}<br>
+            {{ form.password(size=32) }}
+        </p>
+        <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
+        <p>{{ form.submit() }}</p>
     </form>
 </div>
 {% endblock %}
