--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,20 +9,37 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            var searchForm = document.getElementById("searchForm");
+            searchForm.addEventListener("submit", function(event) {
+                event.preventDefault();
+                
+                if (window.innerWidth < 576) { // On small screens
+                    searchForm.action = "advancedsearch";
+                } else {
+                    searchForm.action = "search";
+                }
+                
+                // Submit the form
+                searchForm.submit();
+            });
+        });
+        </script>
     {% endblock %}
 </head> 
 <body>
     <!-- Header derived from w3schools -->
     <div class="topnav" id="topnav">
-        <a class="d-none d-md-block {% if active_link == '/' %}active{% endif %} home" href="/"><img src="NewHomeLogo.png" style="height:50px;" alt="New Home Logo"></a>
+        <a class="home" href="/"><img src="NewHomeLogo.png" style="height:50px;" alt="New Home Logo"></a>
         <a class="d-none d-lg-block {% if active_link == '/about' %}active{% endif %}" href="about">About</a>
         <a class="d-none d-lg-block {% if active_link == '/contact' %}active{% endif %}" href="contact">Contact</a>
         <a class="d-none d-md-block {% if active_link == '/login' %}active{% endif %}" href="login">Login</a>
         <a class="d-none d-lg-block {% if active_link == '/advancedsearch' %}active{% endif %}" href="advancedsearch">Search</a>
         <a class="d-none d-md-block {% if active_link == '/upload' %}active{% endif %}" href="upload">Post</a>
         <div class="search-container">
-            <form action="search" accept-charset="UTF-8" method="get">
-                <input type="text" placeholder="Search.." name="q" maxlength="1024" >
+            <form id="searchForm" accept-charset="UTF-8" method="get">
+                <input type="text" class="d-none d-sm-inline" placeholder="Search.." name="q" maxlength="1024" >
                 <button type="submit"><i class="bi bi-search"></i></button>
             </form>
         </div>
