--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,7 +3,7 @@
 <head>
     {% block head %}
     <meta charset="UTF-8">
-    <title>{% block title %}{% endblock %} - New Home</title>
+    <title>{% block title %}{% endblock %} - NewHome</title>
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
@@ -21,9 +21,10 @@
         <a class="d-none d-md-block {% if active_link == '/login' %}active{% endif %}" href="{{ url_for('login') }}">Login</a>
         {% else %}
         <a class="d-none d-md-block {% if active_link == '/login' %}active{% endif %}" href="{{ url_for('logout') }}">Logout</a>
+        <a class="d-none d-md-block {% if active_link == '/upload' %}active{% endif %}" href="{{ url_for('upload') }}">Post</a>
+        <a class="d-none d-md-block {% if active_link == '/user' %}active{% endif %}" href="{{ url_for('user', username=current_user.username) }}">Profile</a>
         {% endif %}
         <a class="d-none d-lg-block {% if active_link == '/advancedsearch' %}active{% endif %}" href="{{ url_for('advancedSearch') }}">Search</a>
-        <a class="d-none d-md-block {% if active_link == '/upload' %}active{% endif %}" href="{{ url_for('upload') }}">Post</a>
         <div class="search-container">
             <form action="search" accept-charset="UTF-8" method="get">
                 <input type="text" placeholder="Search.." name="q" maxlength="1024" >
