--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -7,6 +7,7 @@
   {% for post in posts %}
   <p>
   {{ post.author.username }} posted: <b>{{ post.item_name }}</b> at {{ post.timestamp }}
+  <img src="{{ post.images.src }}">
   </p>
   {% endfor %}
 </div>
