--- a/app/templates/items.html
+++ b/app/templates/items.html
@@ -1,11 +1,30 @@
 {% extends "base.html" %}
 {% block title %}Item Information - New Home{% endblock %}
 {% block content %}
-    <!-- content for the item image and information -->
-    <img src="book.jpg" alt="Item Image" id="item-image">
+<div class="item-container">
+    <!-- Image now displayed on the left -->
+    <img src="book.jpg" alt="Item Image" id="item-image" class="small-image" onclick="enlargeImage()">
+    
+    <!-- Item information now displayed on the right -->
     <div class="item-info" id="item-info">
         <h2>Item Information</h2>
         <p><strong>Name:</strong> Item Name</p>
         <p><strong>Description:</strong> Item Description</p>
     </div>
+</div>
+
+<script>
+    // Enlarges the image when clicked
+    function enlargeImage(clickedImage) {
+            var pics = document.querySelectorAll(".small-image");
+            // Loop through all images to revert them back to original size
+            pics.forEach(function(image) {
+                if (pics !== clickedImage && pics.classList.contains("large-image")) {
+                    pics.classList.remove("large-image");
+                }
+            });
+            // Toggle the class to switch between small and large image for the clicked image
+            clickedImage.classList.toggle("large-image");
+        }
+</script>
 {% endblock %}
