--- a/app/templates/account.html
+++ b/app/templates/account.html
@@ -1,22 +1,23 @@
 {% extends "base.html" %}
 {% block title %}My Account{% endblock %}
 {% block content %}
-        <h1>My Account</h1>
-        <h2>Details</h2>
-        <span>Username: jimmy_lee89</span><br>
-        <h2>Stats</h2>
-        <span>Items given: 3</span><br>
-        <span>Items taken: 5</span><br>
-        <h2>Active Items</h2>
-        <table>
-            <TR>
-                <TD><a href="items/1">Blue Pen</a></TD>
-                <TD><img width=100px height=100px src = "data/photos/PXL_20240418_101025993.jpg"></TD>
-            </TR>
-        </table>
-        <h2>Badges</h2>
-        <div id="badge-bronze-give">
-            <img class="badge" width=100px height=100px src="assets/badges/give-bronze.png"><br>
-            <span>BRONZE GIVER</span>
-        </div>
+<div class="container">
+    <h2>Details</h2>
+    <span>Username: jimmy_lee89</span><br>
+    <h2>Stats</h2>
+    <span>Items given: 3</span><br>
+    <span>Items taken: 5</span><br>
+    <h2>Active Items</h2>
+    <table>
+        <TR>
+            <TD><a href="items/1">Blue Pen</a></TD>
+            <TD><img width=100px height=100px src = "data/photos/PXL_20240418_101025993.jpg"></TD>
+        </TR>
+    </table>
+    <h2>Badges</h2>
+    <div id="badge-bronze-give">
+        <img class="badge" width=100px height=100px src="assets/badges/give-bronze.png"><br>
+        <span>BRONZE GIVER</span>
+    </div>
+</div>
 {% endblock %}
