Account page dynamically loads username

--- a/app/templates/account.html
+++ b/app/templates/account.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container">
     <h2>Details</h2>
-    <span>Username: jimmy_lee89</span><br>
+    <span>Username: {{username}}</span><br>
     <h2>Stats</h2>
     <span>Items given: 3</span><br>
     <span>Items taken: 5</span><br>
