Account link added to navbar

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -26,6 +26,7 @@
             </form>
         </div>
         <a class="d-none d-md-block {% if active_link == '/login' %}active{% endif %}" href="login">Login</a>
+        <a class="d-none d-md-block {% if active_link == '/account' %}active{% endif %}" href="account"><i class="bi bi-person"></i></a>
     </div>
     <div id="content">{% block content %}{% endblock %}</div>
 
