Made the username the title of the page

--- a/app/templates/account.html
+++ b/app/templates/account.html
@@ -2,8 +2,7 @@
 {% block title %}My Account{% endblock %}
 {% block content %}
 <div class="container">
-    <h2>Details</h2>
-    <span>Username: {{username}}</span><br>
+    <h1>{{username}}'s profile</h1>
     <h2>Stats</h2>
     <span>Items given: 3</span><br>
     <span>Items taken: 5</span><br>
@@ -16,7 +15,7 @@
     </table>
     <h2>Badges</h2>
     <div id="badge-bronze-give">
-        <img class="badge" width=100px height=100px src="assets/badges/give-bronze.png"><br>
+        <img class="badge" width=100px height=100px src="static/assets/badges/give-bronze.png"><br>
         <span>BRONZE GIVER</span>
     </div>
 </div>
