--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -13,5 +13,6 @@
         <br>
         <input type="submit" value="Login" method="post">
     </form>
+    <small>Don't have an account? Sign up <a href="/signup">here</a></small>
 </div>
 {% endblock %}
