Added link from sign up page to login page

--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -4,7 +4,11 @@
 {% block content %}
 <div class="container col-4">
     <form>
-        <h1 class="text-center">Sign up</h1>
+        <div class="text-center">
+            <h1 class="text-center">Sign up</h1>
+            <small>If you already have an account you can <a href="/login">login</a></small>
+        </div>
+        <br>
         <div class="form-group row">
             <label for="username" class="col-4 col-form-label">Username</label>
             <input class="form-control col" type="text" id="username" name="username" placeholder="Username">
