Commented and tidied

--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -1,14 +1,15 @@
-
 {% extends "base.html" %}
 {% block title %}Sign Up{% endblock %}
 {% block content %}
 <div class="container col-4">
     <form>
+        <!-- Form header-->
         <div class="text-center">
             <h1 class="text-center">Sign up</h1>
             <small>If you already have an account you can <a href="/login">login</a></small>
         </div>
         <br>
+        <!-- Form body -->
         <div class="form-group row">
             <label for="username" class="col-4 col-form-label">Username</label>
             <input class="form-control col" type="text" id="username" name="username" placeholder="Username">
