Changed flash comment for better clalrity

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -33,7 +33,7 @@
         </div>
     </div>
     <div>
-      <!--Login form testing-->
+      <!--Flashes error/informational messages for user-->
       {% with messages = get_flashed_messages() %}
       {% if messages %}
       <ul>
