--- a/app/static/index.css
+++ b/app/static/index.css
@@ -10,6 +10,7 @@ This CSS file contains the style information for the navbar and footer.
     top: 0;
     width: 100%;
     z-index: 999;
+    margin-bottom: 40px;
 }
   
 .topnav a {
@@ -86,7 +87,6 @@ This CSS file contains the style information for the navbar and footer.
 
 #content {
     padding-top: 60px;
-    margin-top: 40px;
     margin-bottom: 40px;
 }
 
