--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -1,5 +1,16 @@
 {% extends "base.html" %}
 {% block title %}About{% endblock %}
+{% block head %}
+{{ super() }}
+<style>
+.contact {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 50%;
+}
+</style>
+{% endblock %}
 {% block content %}
 <div class="contact">
     <h3>Contact us</h3>
@@ -18,7 +29,7 @@
             <!-- Subject of your request -->
             <p>
                 {{ form.subject.label }}<br>
-                {{form.subject(placeholder='Your subject ...')}}
+                {{form.subject(placeholder='Subject ...')}}
             </p>
             <!-- Content of your request -->
             <p>
